@@ -204,6 +204,8 @@ MenuConfig::MenuConfig (bool _is_game_state)
 	, mouse_move_attack_lb(new WidgetLabel())
 	, joystick_deadzone_sl(new WidgetSlider(WidgetSlider::DEFAULT_FILE))
 	, joystick_deadzone_lb(new WidgetLabel())
+	, touch_controls_cb(new WidgetCheckBox(WidgetCheckBox::DEFAULT_FILE))
+	, touch_controls_lb(new WidgetLabel())
 
 	, activemods_lstb(new WidgetListBox(10, WidgetListBox::DEFAULT_FILE))
 	, activemods_lb(new WidgetLabel())
@@ -433,6 +435,7 @@ void MenuConfig::init() {
 	cfg_tabs[INPUT_TAB].setOptionWidgets(Platform::Input::MOUSE_MOVE_SWAP, mouse_move_swap_lb, mouse_move_swap_cb, msg->get("Swap mouse movement button"));
 	cfg_tabs[INPUT_TAB].setOptionWidgets(Platform::Input::MOUSE_MOVE_ATTACK, mouse_move_attack_lb, mouse_move_attack_cb, msg->get("Attack with mouse movement"));
 	cfg_tabs[INPUT_TAB].setOptionWidgets(Platform::Input::JOYSTICK_DEADZONE, joystick_deadzone_lb, joystick_deadzone_sl, msg->get("Joystick Deadzone"));
+	cfg_tabs[INPUT_TAB].setOptionWidgets(Platform::Input::TOUCH_CONTROLS, touch_controls_lb, touch_controls_cb, msg->get("Touch Controls"));
 
 
 	for (size_t i = 0; i < keybinds_btn.size(); ++i) {
@@ -860,6 +863,7 @@ void MenuConfig::updateInput() {
 	mouse_move_cb->setChecked(settings->mouse_move);
 	mouse_move_swap_cb->setChecked(settings->mouse_move_swap);
 	mouse_move_attack_cb->setChecked(settings->mouse_move_attack);
+	touch_controls_cb->setChecked(settings->touchscreen);
 
 	if (settings->enable_joystick && inpt->getNumJoysticks() > 0) {
 		inpt->initJoystick();
@@ -1216,6 +1220,9 @@ void MenuConfig::logicInput() {
 		else {
 			settings->enable_joystick = false;
 		}
+	}
+	else if (cfg_tabs[INPUT_TAB].options[Platform::Input::TOUCH_CONTROLS].enabled && touch_controls_cb->checkClickAt(mouse.x, mouse.y)) {
+		settings->touchscreen = touch_controls_cb->isChecked();
 	}
 }
 
