@@ -278,6 +278,8 @@ public:
 	WidgetLabel                * mouse_move_attack_lb;
 	WidgetSlider               * joystick_deadzone_sl;
 	WidgetLabel                * joystick_deadzone_lb;
+	WidgetCheckBox             * touch_controls_cb;
+	WidgetLabel                * touch_controls_lb;
 
 	WidgetListBox              * activemods_lstb;
 	WidgetLabel                * activemods_lb;
